Fix community card overlapping

--- a/_sass/_community.scss
+++ b/_sass/_community.scss
@@ -9,7 +9,7 @@
 
   .community {
     max-width:20rem;
-    height: 18.5rem;
+    height: 19rem;
     margin: 0.5rem auto;
     padding: 2rem 1rem;
     background-color: white;
