--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,7 +16,7 @@ $gray-30: #4A4A4A;
   a {
     border: 2px solid white;
     border-radius: 10px;
-    padding: 0.7rem 1.2rem;
+    padding: 0.6rem 1rem;
     margin: 0.5rem 0;
     display: inline-block;
     color: white;
